# animaru

./: .SRCINFO  .gitignore  LICENSE  PKGBUILD  README.md  pyproject.toml
animaru/: __main__.py  main.py
animaru/utils/: history.py  mal_client.py  player.py  skip_detector.py
animaru/widgets/: anime_card.py
animaru/windows/: detail_view.py  homepage.py  main_window.py
animaru_app/: __main__.py  main.py
animaru_app/utils/: config.py  history.py  mal_client.py  series.py  skip_detector.py
animaru_app/widgets/: anime_card.py  category_row.py
animaru_app/windows/: detail_view.py  homepage.py  main_window.py
data/: animaru.desktop
