[build-system]
requires = ["setuptools>=75", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "animaru"
version = "0.1.1"
description = "A GTK4 GUI for watching and downloading anime"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "GPL-3.0-only"}
authors = [
    {name = "Murdi", email = "murdi@example.com"},
]
keywords = ["anime", "g tk4", "adwaita", "anipy"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: X11 Applications :: GTK",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Topic :: Multimedia :: Video",
]

dependencies = [
    "anipy-api>=3.8",
    "PyGObject>=3.56",
]

[project.urls]
Homepage = "https://github.com/murdi/animaru"
Bug_Tracker = "https://github.com/murdi/animaru/issues"

[project.scripts]
animaru = "animaru_app.main:main"

[tool.setuptools.packages.find]
include = ["animaru_app*"]
